#Copyright (C) 2010-2014 Tom Schoonjans and Laszlo Vincze

#This program is free software: you can redistribute it and/or modify
#it under the terms of the GNU General Public License as published by
#the Free Software Foundation, either version 3 of the License, or
#(at your option) any later version.

#This program is distributed in the hope that it will be useful,
#but WITHOUT ANY WARRANTY; without even the implied warranty of
#MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#GNU General Public License for more details.

#You should have received a copy of the GNU General Public License
#along with this program.  If not, see <http://www.gnu.org/licenses/>.

xmimsim_exampledir = $(datadir)/examples/xmimsim

dist_xmimsim_example_DATA = In.xmsi \
			    In.xmso \
			    Makefile.am \
			    srm1132.xmsi \
			    srm1132.xmso \
			    srm1155.xmsi \
			    srm1155.xmso \
			    srm1412.xmsi \
			    srm1412.xmso

